--- a/legacy-mining-agent/main.ipynb
+++ b/legacy-mining-agent/main.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMsGXBNEcWjCujypGUgRzW3"
+      "authorship_tag": "ABX9TyPn2KF1DUtlx2GzpUGKLNT7",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/avijhingran/ml_code/blob/main/legacy-mining-agent/main.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": null,
@@ -27,6 +38,16 @@
         "\n",
         "{\n",
         " \"cells\": [\n",
+        "  {\n",
+        "   \"cell_type\": \"code\",\n",
+        "   \"metadata\": {},\n",
+        "   \"source\": [\n",
+        "    \"# Step 0: Install required packages\",\n",
+        "    \"!pip install -q python-docx openai\"\n",
+        "   ],\n",
+        "   \"execution_count\": null,\n",
+        "   \"outputs\": []\n",
+        "  },\n",
         "  {\n",
         "   \"cell_type\": \"code\",\n",
         "   \"metadata\": {},\n",
@@ -114,7 +135,7 @@
         " },\n",
         " \"nbformat\": 4,\n",
         " \"nbformat_minor\": 5\n",
-        "}\n"
+        "}"
       ]
     }
   ]
