--- a/legacy-mining-agent/main.ipynb
+++ b/legacy-mining-agent/main.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPn2KF1DUtlx2GzpUGKLNT7",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyPfGnw6sh3+woypbMk31mMK"
     },
     "kernelspec": {
       "name": "python3",
@@ -17,16 +16,6 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/avijhingran/ml_code/blob/main/legacy-mining-agent/main.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -34,108 +23,38 @@
       },
       "outputs": [],
       "source": [
-        "### legacy-mining-agent/main.ipynb\n",
+        "# ✅ Install required packages\n",
+        "!pip install -q python-docx openai\n",
         "\n",
-        "{\n",
-        " \"cells\": [\n",
-        "  {\n",
-        "   \"cell_type\": \"code\",\n",
-        "   \"metadata\": {},\n",
-        "   \"source\": [\n",
-        "    \"# Step 0: Install required packages\",\n",
-        "    \"!pip install -q python-docx openai\"\n",
-        "   ],\n",
-        "   \"execution_count\": null,\n",
-        "   \"outputs\": []\n",
-        "  },\n",
-        "  {\n",
-        "   \"cell_type\": \"code\",\n",
-        "   \"metadata\": {},\n",
-        "   \"source\": [\n",
-        "    \"# Step 1: Set OpenRouter API Key\",\n",
-        "    \"import os\\n\",\n",
-        "    \"os.environ[\\\"OPENROUTER_API_KEY\\\"] = \\\"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\\\"\"\n",
-        "   ],\n",
-        "   \"execution_count\": null,\n",
-        "   \"outputs\": []\n",
-        "  },\n",
-        "  {\n",
-        "   \"cell_type\": \"code\",\n",
-        "   \"metadata\": {},\n",
-        "   \"source\": [\n",
-        "    \"# Step 2: Unzip legacy-mining-agent.zip uploaded to Colab\",\n",
-        "    \"from google.colab import files\\n\",\n",
-        "    \"uploaded = files.upload()  # Upload legacy-mining-agent.zip manually\\n\",\n",
-        "    \"!unzip -q legacy-mining-agent.zip\"\n",
-        "   ],\n",
-        "   \"execution_count\": null,\n",
-        "   \"outputs\": []\n",
-        "  },\n",
-        "  {\n",
-        "   \"cell_type\": \"code\",\n",
-        "   \"metadata\": {},\n",
-        "   \"source\": [\n",
-        "    \"# Step 3: Add project to sys.path\",\n",
-        "    \"import sys\\n\",\n",
-        "    \"sys.path.append(\\\"/content/legacy-mining-agent\\\")\"\n",
-        "   ],\n",
-        "   \"execution_count\": null,\n",
-        "   \"outputs\": []\n",
-        "  },\n",
-        "  {\n",
-        "   \"cell_type\": \"code\",\n",
-        "   \"metadata\": {},\n",
-        "   \"source\": [\n",
-        "    \"# Step 4: Extract ZIP containing COBOL/JCL files\",\n",
-        "    \"from src.extractor import extract_zip\\n\",\n",
-        "    \"zip_path = \\\"legacy-mining-agent/sample_data/legacy_project.zip\\\"\\n\",\n",
-        "    \"extract_zip(zip_path, \\\"legacy_project\\\")\"\n",
-        "   ],\n",
-        "   \"execution_count\": null,\n",
-        "   \"outputs\": []\n",
-        "  },\n",
-        "  {\n",
-        "   \"cell_type\": \"code\",\n",
-        "   \"metadata\": {},\n",
-        "   \"source\": [\n",
-        "    \"# Step 5: Analyze files and generate Word reports\",\n",
-        "    \"from src.analyzer import analyze_all_files\\n\",\n",
-        "    \"from src.doc_writer import save_reports\\n\",\n",
-        "    \"\\n\",\n",
-        "    \"results = analyze_all_files(\\\"legacy_project\\\")\\n\",\n",
-        "    \"save_reports(results, \\\"output\\\")\"\n",
-        "   ],\n",
-        "   \"execution_count\": null,\n",
-        "   \"outputs\": []\n",
-        "  },\n",
-        "  {\n",
-        "   \"cell_type\": \"code\",\n",
-        "   \"metadata\": {},\n",
-        "   \"source\": [\n",
-        "    \"# Step 6: Download the reports as a ZIP\",\n",
-        "    \"import shutil\\n\",\n",
-        "    \"shutil.make_archive(\\\"legacy_output\\\", 'zip', \\\"output\\\")\\n\",\n",
-        "    \"from google.colab import files\\n\",\n",
-        "    \"files.download(\\\"legacy_output.zip\\\")\"\n",
-        "   ],\n",
-        "   \"execution_count\": null,\n",
-        "   \"outputs\": []\n",
-        "  }\n",
-        " ],\n",
-        " \"metadata\": {\n",
-        "  \"kernelspec\": {\n",
-        "   \"display_name\": \"Python 3\",\n",
-        "   \"language\": \"python\",\n",
-        "   \"name\": \"python3\"\n",
-        "  },\n",
-        "  \"language_info\": {\n",
-        "   \"name\": \"python\",\n",
-        "   \"version\": \"3.10\"\n",
-        "  }\n",
-        " },\n",
-        " \"nbformat\": 4,\n",
-        " \"nbformat_minor\": 5\n",
-        "}"
+        "# ✅ Set OpenRouter API Key\n",
+        "import os\n",
+        "os.environ[\"OPENROUTER_API_KEY\"] = \"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\"\n",
+        "\n",
+        "# ✅ Clone your GitHub repo\n",
+        "!git clone https://github.com/avijhingran/ml_code.git\n",
+        "\n",
+        "# ✅ Add project to Python path\n",
+        "import sys\n",
+        "sys.path.append(\"/content/ml_code/legacy-mining-agent\")\n",
+        "\n",
+        "# ✅ Extract legacy_project.zip\n",
+        "from src.extractor import extract_zip\n",
+        "zip_path = \"/content/ml_code/legacy-mining-agent/sample_data/legacy_project.zip\"\n",
+        "extract_zip(zip_path, \"legacy_project\")\n",
+        "\n",
+        "# ✅ Analyze and generate Word docs\n",
+        "from src.analyzer import analyze_all_files\n",
+        "from src.doc_writer import save_reports\n",
+        "\n",
+        "results = analyze_all_files(\"legacy_project\")\n",
+        "save_reports(results, \"output\")\n",
+        "\n",
+        "# ✅ Package and download reports\n",
+        "import shutil\n",
+        "from google.colab import files\n",
+        "\n",
+        "shutil.make_archive(\"legacy_output\", 'zip', \"output\")\n",
+        "files.download(\"legacy_output.zip\")"
       ]
     }
   ]
