--- a/legacy-mining-agent/main.ipynb
+++ b/legacy-mining-agent/main.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPfGnw6sh3+woypbMk31mMK"
+      "authorship_tag": "ABX9TyOXIl90xdxvxNmqld3CiyKa"
     },
     "kernelspec": {
       "name": "python3",
@@ -23,33 +23,36 @@
       },
       "outputs": [],
       "source": [
-        "# ✅ Install required packages\n",
+        "# Clean up any previous clone\n",
+        "!rm -rf ml_code\n",
+        "\n",
+        "# Install required packages\n",
         "!pip install -q python-docx openai\n",
         "\n",
-        "# ✅ Set OpenRouter API Key\n",
+        "# Set OpenRouter API Key\n",
         "import os\n",
         "os.environ[\"OPENROUTER_API_KEY\"] = \"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\"\n",
         "\n",
-        "# ✅ Clone your GitHub repo\n",
+        "# Clone your GitHub repo\n",
         "!git clone https://github.com/avijhingran/ml_code.git\n",
         "\n",
-        "# ✅ Add project to Python path\n",
+        "# Add project to Python path\n",
         "import sys\n",
         "sys.path.append(\"/content/ml_code/legacy-mining-agent\")\n",
         "\n",
-        "# ✅ Extract legacy_project.zip\n",
+        "# Extract legacy_project.zip\n",
         "from src.extractor import extract_zip\n",
         "zip_path = \"/content/ml_code/legacy-mining-agent/sample_data/legacy_project.zip\"\n",
         "extract_zip(zip_path, \"legacy_project\")\n",
         "\n",
-        "# ✅ Analyze and generate Word docs\n",
+        "# Analyze and generate Word docs\n",
         "from src.analyzer import analyze_all_files\n",
         "from src.doc_writer import save_reports\n",
         "\n",
         "results = analyze_all_files(\"legacy_project\")\n",
         "save_reports(results, \"output\")\n",
         "\n",
-        "# ✅ Package and download reports\n",
+        "# Package and download reports\n",
         "import shutil\n",
         "from google.colab import files\n",
         "\n",
