--- a/legacy-mining-agent/main.ipynb
+++ b/legacy-mining-agent/main.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOXIl90xdxvxNmqld3CiyKa"
+      "authorship_tag": "ABX9TyNEaWIs5/lGLMCobpEOJYQo"
     },
     "kernelspec": {
       "name": "python3",
@@ -40,10 +40,12 @@
         "import sys\n",
         "sys.path.append(\"/content/ml_code/legacy-mining-agent\")\n",
         "\n",
-        "# Extract legacy_project.zip\n",
-        "from src.extractor import extract_zip\n",
+        "# Extract ZIP manually using Python stdlib\n",
+        "import zipfile\n",
         "zip_path = \"/content/ml_code/legacy-mining-agent/sample_data/legacy_project.zip\"\n",
-        "extract_zip(zip_path, \"legacy_project\")\n",
+        "with zipfile.ZipFile(zip_path, 'r') as zip_ref:\n",
+        "    zip_ref.extractall(\"legacy_project\")\n",
+        "print(\"ZIP extracted to: legacy_project\")\n",
         "\n",
         "# Analyze and generate Word docs\n",
         "from src.analyzer import analyze_all_files\n",
