--- a/legacy-mining-agent/main.ipynb
+++ b/legacy-mining-agent/main.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNq+Tm8qupocUBFOA0c3Y7v"
+      "authorship_tag": "ABX9TyN1422IgDuEvJBatBE4pZo3"
     },
     "kernelspec": {
       "name": "python3",
@@ -58,8 +58,11 @@
         "import shutil\n",
         "from google.colab import files\n",
         "\n",
-        "shutil.make_archive(\"legacy_output\", 'zip', \"output\")\n",
-        "files.download(\"legacy_output.zip\")"
+        "shutil.make_archive(\n",
+        "    \"/content/ml_code/legacy-mining-agent/output/legacy_output\",  # target zip path (no .zip extension)\n",
+        "    'zip',\n",
+        "    \"output\"  # source directory to zip\n",
+        ")"
       ]
     }
   ]
