--- a/legacy-mining-agent/main.ipynb
+++ b/legacy-mining-agent/main.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOFJHMp8AyvH6ROV0YxWfaO"
+      "authorship_tag": "ABX9TyOkLyW6PKC5YvrG+zgxqxKj"
     },
     "kernelspec": {
       "name": "python3",
@@ -47,22 +47,18 @@
         "    zip_ref.extractall(\"legacy_project\")\n",
         "print(\"ZIP extracted to: legacy_project\")\n",
         "\n",
-        "# Analyze and generate Word docs\n",
-        "from src.analyzer import analyze_all_files\n",
-        "from src.doc_writer import save_reports\n",
-        "\n",
-        "results = analyze_all_files(\"legacy_project\")\n",
-        "save_reports(results, \"output\")\n",
+        "# Agentic analysis using planning loop\n",
+        "from src.agent_loop import run_agent_loop\n",
+        "run_agent_loop(\"legacy_project\", output_dir=\"output\", model=\"openchat/openchat-7b\")\n",
         "\n",
         "# Package and download reports\n",
         "import shutil\n",
-        "from google.colab import files\n",
-        "\n",
         "shutil.make_archive(\n",
         "    \"/content/ml_code/legacy-mining-agent/output/legacy_output\",  # target zip path (no .zip extension)\n",
         "    'zip',\n",
         "    \"output\"  # source directory to zip\n",
-        ")"
+        ")\n",
+        "print(\"Zipped report created at: legacy_output.zip\")\n"
       ]
     }
   ]
